# SERVICE-ON-CLOUD

./: README.md
Ingress/: ingress.yaml
eks/: cluster.yaml
etl/: ETL_test.ipynb  ETL_v4.html  README.md  log.txt  pom.xml
etl/src/main/scala/: Twitter.scala
k8s/cluster/: cluster.yaml  ig-master.yaml  ig-nodes.yaml
k8s/helm/blockchain/: Chart.yaml
k8s/helm/blockchain/templates/: configMap.yaml  deployment.yaml  service.yaml
k8s/helm/qrcode/: Chart.yaml
k8s/helm/qrcode/templates/: configMap.yaml  deployment.yaml  service.yaml
k8s/helm/twitter/: Chart.yaml
k8s/helm/twitter/templates/: configMap.yaml  deployment.yaml  mysql.yaml  persistentVolume.yaml  service.yaml  storageClass.yaml  volumeSnapshot.yaml  volumeSnapshotClass.yaml  volumeSnapshotContent.yaml
qrcode/: Cargo.toml
qrcode/src/: encode_qrcode.rs  utils.rs
script/: README.md  configure_github.sh  create_cluster.sh  create_s3_buckets.sh  deploy_blockchain.sh  deploy_qrcode.sh  deploy_twitter.sh  destroy_aws_resources.sh  destroy_eks_clusters.sh  destroy_s3_buckets.sh  eks_cluster_configure.sh  eks_cluster_init.sh
twitter/: Cargo.toml  Dockerfile
twitter/src/: main.rs
web/: README.md
web/qrcode/: Dockerfile
web/qrcode/src/: decode_qrcode.rs  main.rs  matrix.rs
web/qrcode/src/decode_qrcode/: find_qrcode.rs
web/twitter/src/: kmp.rs  twitter.rs
web/web_axum/src/: demo.json
web/web_ntex/: Cargo.toml  Dockerfile
web_axum/: Cargo.toml
web_axum/src/: main.rs  verify_blockchain.rs
web_ntex/src/: main.rs
