[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = { version = "1.0.196" }
flate2 = "1.0"
base64 = "0.21.7"
num = "0.4.1"
sha256 = "1.5.0"
substring = "1.4.5"
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

