[package]
name = "twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
serde = { version = "1.0.196" }
sqlx = {  version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
log = "0.4.21"
tokio = { version = "1", features = ["full"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] } # Adjust for your database backend
chrono = "0.4"
