[package]
name = "web_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1.0.196", features = ["derive"] }
flate2 = "1.0"
base64 = "0.21.7"
num = "0.4.1"
sha256 = "1.5.0"
substring = "1.4.5"
serde_json = "1.0.114"
tracing-subscriber = "0.3.18"
